@@ -318,6 +318,7 @@ David Goodger
 Hans de Graaff
 Eddy De Greef
 Duncan Grisby
+Eric Groo
 Dag Gruneau
 Michael Guravage
 Lars Gustäbel
@@ -457,6 +458,7 @@ Lenny Kneler
 Pat Knight
 Greg Kochanski
 Damon Kohler
+Vlad Korolev
 Joseph Koshy
 Maksim Kozyarchuk
 Stefan Krah
@@ -536,6 +538,7 @@ David Marek
 Doug Marien
 Alex Martelli
 Anthony Martin
+Owen Martin
 Sébastien Martini
 Roger Masse
 Nick Mathewson
@@ -733,6 +736,7 @@ Michael Scharf
 Andreas Schawo
 Neil Schemenauer
 David Scherer
+Bob Schmertz
 Gregor Schmid
 Ralf Schmitt
 Michael Schneider
